# gym-app-new

./: .gitignore  .vercelignore  AUDIT_2026-07-05.md  AUDIT_PERF_2026-07-09.md  CLAUDE.md  EXERCISE_VIDEO_CAST.md  EXERCISE_VIDEO_PROGRESS.md  PLATFORM_AUDIT_2026-06-11.md  RELEASE_PLAN_2026-07-11.md  TRAINER_AUDIT_2026-06-11.md  exercises_videos.csv  generate_meal_images.py  generate_missing_foods.py  handoff.md  index.html  missing_foods.txt  package-lock.json  package.json  vercel.json
.claude/: launch.json  settings.json  settings.local.json
.github/workflows/: ci.yml  uptime.yml
compliance/: APP_REVIEW_NOTES.md  APP_STORE_PRIVACY_ANSWERS.md  AUDIT_2026-06-16.md  PLAY_DECLARATIONS.md  PRIVACY_POLICY_OUTLINE.md  README.md  REWARDS_TERMS_TEMPLATE.md  eliminar-cuenta-snippet.md
docs/: GTM_RETENTION_PLAYBOOK.md  RETENTION_TIMELINE.md
gym-app/: .env.example  .gitignore  CLAUDE.md  FEATURES.md  MEMBER_AUDIT_2026-06-13.md  capacitor.config.json  eslint.config.js  generate_food_images.py  handoff.md  index.html  load-test.mjs  package-lock.json  package.json  test-members-import.csv  upload_videos.mjs  vercel.json  vite.config.js  vitest.config.js
gym-app/.claude/: gsd-file-manifest.json
gym-app/.interface-design/: system.md
gym-app/android/: capacitor.settings.gradle
gym-app/src-tauri/: .gitignore  Cargo.toml  SIDECAR.md  installer.nsh  tauri.conf.json
gym-app/src-tauri/icons/: icon.icns
gym-app/src-tauri/src/: lib.rs  scanner.rs  scanner_kbd.rs
manual/: _render.mjs  app.js  data.js  index.html  manual.css
src/: App.css  App.jsx  index.css  mockDb.js
(+1493 files in other folders)
